[package]
name = "omage"
version = "0.2.3"
edition = "2021"
authors = ["Hakan Vardar"]
description = "`rimage` is a Rust library for image processing. It provides functionality for handling images, drawing basic shapes, and configuring image properties."
license = "MIT"
repository = "https://github.com/HakanVardarr/omage"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
