[package]
name = "omage"
version = "0.3.11"
edition = "2021"
authors = ["Hakan Vardar"]
description = "`omage` is a Rust library for image processing. It provides functionality for handling images, drawing basic shapes, and configuring image properties."
license = "MIT"
repository = "https://github.com/HakanVardarr/omage"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusttype = "0.9.3"
image = "0.24.5"
